--- a/BorderControl/BorderControl.csproj
+++ b/BorderControl/BorderControl.csproj
@@ -43,7 +43,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Citizen.cs" />
+    <Compile Include="IBirthable.cs" />
     <Compile Include="IInhabitant.cs" />
+    <Compile Include="Pet.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Robot.cs" />
