--- a/BorderControl/BorderControl.csproj
+++ b/BorderControl/BorderControl.csproj
@@ -44,8 +44,10 @@
   <ItemGroup>
     <Compile Include="Citizen.cs" />
     <Compile Include="IBirthable.cs" />
+    <Compile Include="IBuyer.cs" />
     <Compile Include="IInhabitant.cs" />
     <Compile Include="Pet.cs" />
+    <Compile Include="Rebel.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Robot.cs" />
